namespace Constants
{
    public static class triggers 
    {
        public const string ACTIONS_ACTIVE = "ActionsActive";
        public const string CLOSE = "Close";
        public const string ENABLED = "Enabled";
        public const string FOCUSED = "Focused";
        public const string HIDE = "Hide";
        public const string MAIL_ACTIVE = "MailActive";
        public const string ONCLICK = "OnClick";
        public const string OPERATE_ACTIVE = "OperateActive";
        public const string OPEN = "Open";
        public const string PRESSED = "Pressed";
        public const string SHOW = "Show";
        public const string ACTIVATE = "Activate";
    }
}
